Efmub-Ogy/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>AES_SFConnector__AgentType__c</fullName>
        <label>AgentType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AES_SFConnector__CallReference__c</fullName>
        <label>CallReference</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AES_SFConnector__Called__c</fullName>
        <description>The number that was called by the originator. (DNIS)</description>
        <label>Called</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AES_SFConnector__Caller__c</fullName>
        <description>The number that was dialed by the originator of the call. (ANI)</description>
        <label>Caller</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AES_SFConnector__UCID__c</fullName>
        <description>Universal Call ID for the Avaya telephone system.</description>
        <label>UCID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AES_SFConnector__UUI__c</fullName>
        <description>User-to-User Information as provided by the CTI link</description>
        <label>UUI</label>
        <length>96</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Attempt__c</fullName>
        <label>Call Attempt</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Callback_Result__c</fullName>
        <label>Call Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Left Voicemail</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Unable to talk</fullName>
                </value>
                <value>
                    <fullName>Wrong or Invalid Number</fullName>
                </value>
                <value>
                    <fullName>Successful</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>